2019-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c: fix bug #2713
	* support/regression/tests/bug2783061.c: bug #2713 tested

2019-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Include pdk libraries in Windows installer.

2019-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/_ulong2fs.c: fix bug #2787
	* support/regression/tests/gcc-torture-execute-floatunsisf-1.c:
	  re-enable test
	* src/ds390/gen.c: fix bug #2835
	* support/regression/tests/bug-2833.c: re-enable tests

2019-03-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Include pdk binaries in Windows installer.

2019-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/_modslonglong.c: fix bug #2790
	* support/regression/tests/gcc-torture-execute-arith-rand-ll.c:
	  re-enable tests

2019-03-19 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/inst.cc:
	  Simulator fixes, patches by Nicolas Lesser.
	* sdas/aspdk15/pdk15mch.c:
	  Assembler fix, patch by Nicolas Lesser
	* support/regression/tests/staticinit.c,
	  src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Implement RFE #614.

2019-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c: fix bug #2702
	* device/lib/_rrulonglong.c,
	* device/lib/_rrslonglong.c: fix bug #2704
	* support/regression/tests/longlong.c: re-enable tests for
	  hc08/s08/ds390, add more long long shifting tests
	* support/regression/tests/gcc-torture-execute-ashldi-1.c,
	* support/regression/tests/gcc-torture-execute-ashrdi-1.c,
	* support/regression/tests/gcc-torture-execute-divconst-3.c,
	* support/regression/tests/gcc-torture-execute-lshrdi-1.c,
	* support/regression/tests/gcc-torture-execute-vrp-7.c:
	  re-enable tests


2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve |=, &=, ^=.

2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,