@@ -18,7 +18,6 @@ static void mem_set (void* dst, int val, UINT cnt)
 	ASSERT (cnt == 1);
 }
 
-#if 0 // Enable when bug #27903 is fixed.
 void f_mkfs (
 	void* work,
 	UINT len
@@ -53,15 +52,12 @@ void f_mkfs (
 				sect += n; nsect -= n;
 			} while (nsect);
 		}
-
 	}
 }
 #endif
 
 void testBug(void)
 {
-#if 0 // Enable when bug #27903 is fixed.
 	f_mkfs (global_buf, 1);
-#endif
 }
 
