@@ -1,3 +1,8 @@
+2019-03-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCopt.c: fix bug #2793
+	* support/regression/tests/bug-2793: re-enable test
+
 2019-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/main.c: fix bug #2713
